--- a/package.json
+++ b/package.json
@@ -8,10 +8,20 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage",
+    "test:auth": "vitest run src/contexts/__tests__/AuthContext.test.tsx src/components/__tests__/AuthGuard.test.tsx src/components/access-control/__tests__/ModuleAccessGuard.test.tsx",
+    "test:auth:watch": "vitest --watch src/contexts/__tests__/AuthContext.test.tsx src/components/__tests__/AuthGuard.test.tsx src/components/access-control/__tests__/ModuleAccessGuard.test.tsx",
+    "test:auth:coverage": "vitest run --coverage src/contexts/__tests__/AuthContext.test.tsx src/components/__tests__/AuthGuard.test.tsx src/components/access-control/__tests__/ModuleAccessGuard.test.tsx",
+    "test:foundation": "vitest run src/contexts/__tests__/ src/components/__tests__/ src/components/access-control/__tests__/",
+    "test:foundation:watch": "vitest --watch src/contexts/__tests__/ src/components/__tests__/ src/components/access-control/__tests__/",
+    "test:foundation:coverage": "vitest run --coverage src/contexts/__tests__/ src/components/__tests__/ src/components/access-control/__tests__/"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/core": "^5.0.3",
     "@dnd-kit/sortable": "^6.0.1",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.9.0",
@@ -42,7 +52,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.50.2",
     "@tanstack/react-query": "^5.56.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -55,6 +65,8 @@
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
     "jsdom": "^26.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "papaparse": "^5.5.3",
@@ -70,6 +82,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "use-debounce": "^10.0.5",
     "vaul": "^0.9.3",
     "vitest": "^3.2.4",
