feat: Comprehensive module system improvements and AI integration
Major enhancements to the module management system:

🎯 AI Contribution Display System:
- Added AI fields (capabilities, level, description, features) to LoadedModule interface
- Enhanced ModuleCard.tsx with AI contribution sections and color-coded badges
- Updated useDevModules.ts to pass AI data from database to UI components
- Fixed RealModuleDashboard.tsx for production modules with AI display

🏗️ Three-Tier Module Architecture:
- Implemented Super Admin, Foundation, and Business module classifications
- Added 'type' column to system_modules table via migration
- Classified all 53 modules across the three tiers
- Updated TypeScript interfaces and classification logic

🧭 Module Navigation & Access:
- Fixed DynamicModulePage.tsx to load all modules, not just production
- Uncommented dynamic route in SuperAdminRoutes.tsx for individual module pages
- Enhanced ModuleTypeItem.tsx for better navigation organization
- Updated module navigation components with improved UX

📊 Development Dashboard Enhancements:
- Added comprehensive filtering (All Types, Super Admin, Foundation, Business)
- Implemented category grouping with module counts
- Added 'Expand All' and 'Collapse All' functionality
- Enhanced imports and UI components for better organization

🗄️ Database & Migration Updates:
- Created AI contribution fields migration (20250107000000)
- Added module types migration (20250712000000) with complete classification
- Updated module registration and promotion workflows

📋 Module Analysis & Planning:
- Comprehensive audit of all 53 modules (auditModulePurposes.ts)
- Detailed consolidation plan reducing to 35 modules (moduleConsolidationPlan.ts)
- Data preservation guarantee strategy (dataPreservationGuarantee.ts)
- Business module enhancement scripts and utilities

✨ Code Quality & Performance:
- Enhanced error handling and loading states
- Improved TypeScript interfaces and type safety
- Better component

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:auth:coverage": "vitest run --coverage src/contexts/__tests__/AuthContext.test.tsx src/components/__tests__/AuthGuard.test.tsx src/components/access-control/__tests__/ModuleAccessGuard.test.tsx",
     "test:foundation": "vitest run src/contexts/__tests__/ src/components/__tests__/ src/components/access-control/__tests__/",
     "test:foundation:watch": "vitest --watch src/contexts/__tests__/ src/components/__tests__/ src/components/access-control/__tests__/",
-    "test:foundation:coverage": "vitest run --coverage src/contexts/__tests__/ src/components/__tests__/ src/components/access-control/__tests__/"
+    "test:foundation:coverage": "vitest run --coverage src/contexts/__tests__/ src/components/__tests__/ src/components/access-control/__tests__/",
+    "modules:register": "node --loader ts-node/esm src/modules/importModulesToSupabase.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^5.0.3",
